--- a/dynamicg.html
+++ b/dynamicg.html
@@ -13,6 +13,27 @@
 <body>
    
     <div class="container">
+        <!--<div class="filter">
+            Choose:
+            <span class="1">I</span>
+            <span class="2">II</span>
+            <span class="3">III</span>
+            <span class="4">IV</span>
+            <span class="5">V</span>
+            <span class="6">VI</span>
+            <span class="7">VII</span>
+            <span class="8">VIII</span>
+            <span class="9">IX</span>
+            <span class="10">X</span>
+            <span class="11">XI</span>
+            <span class="12">XII</span>
+            <span class="13">XIII</span>
+            <span class="14">XIV</span>
+            <span class="15">XV</span>
+            <span class="16">XVI</span>/!-->
+
+
+        </div>
         <div class="cursor1">
         <script type="text/javascript">
             const cursor = document.querySelector(".cursor1");
