--- a/dynamicg.html
+++ b/dynamicg.html
@@ -24,5 +24,23 @@
        </div>
     </div>
 
+    <div class="image-container">
+    </div>
+
+    <div class="bgimage1"></div>
+
+
+<!--<div class="container2">
+    <div class="cursor2">
+        <script type="text/javascript">
+            const cursor = document.querySelector(".cursor2");
+            window.addEventListener("mousemove", function(e){
+            cursor.style.left = (e.x-100)+"px";
+            cursor.style.top  = (e.y-100)+"px";
+            })
+            </script>
+    </div>/-->
+</div>
+
 </body>
 </html>
